--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
+    "resend": "^6.0.3",
     "slugify": "^1.6.6",
     "stripe": "^18.3.0"
   }
